unpackaged/main/default/objects/WC_Credit_Decision__c/WC_Credit_Decision__c.object-meta.xml
<CustomObject>
    <label>WC Credit Decision</label>
    <nameField>
        <displayFormat>CDR-{0}</displayFormat>
        <label>WC_Credit_Decision</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Credit Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>