unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Annual_Revenue_Decision__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Decision__c</fullName>
    <label>Annual Revenue Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>