unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Average_NSFs_Decision__c.field-meta.xml
<CustomField>
    <fullName>Average_NSFs_Decision__c</fullName>
    <label>Avg or Recent NSF's Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>