unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Avg_Daily_Sales_Coef__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Sales_Coef__c</fullName>
    <label>Avg Daily Sales Coef</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>