unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Bankruptcy_Decision__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Decision__c</fullName>
    <label>Bankruptcy Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>