unpackaged/main/default/objects/WC_Credit_Decision__c/fields/BIZ_charge_off_amount_fin_24m__c.field-meta.xml
<CustomField>
    <fullName>BIZ_charge_off_amount_fin_24m__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of financial charge-off amount for charge-off accounts with the last 24 months</description>
    <inlineHelpText>Total financial charge-off amount in last 24 months</inlineHelpText>
    <label>Financial charge-off amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>