unpackaged/main/default/objects/WC_Credit_Decision__c/fields/BIZ_charge_off_amount_nfin_24m__c.field-meta.xml
<CustomField>
    <fullName>BIZ_charge_off_amount_nfin_24m__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of non-financial charge-off amount for charge-off accounts within the last 24 months</description>
    <inlineHelpText>Total non-financial charge-off amount in last 24 months</inlineHelpText>
    <label>Non-Financial Charge-Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>