unpackaged/main/default/objects/WC_Credit_Decision__c/fields/BIZ_N_NEW_ACCOUNTS__c.field-meta.xml
<CustomField>
    <fullName>BIZ_N_NEW_ACCOUNTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of New Non-Financial Account Opened in the Last 3 Months</description>
    <inlineHelpText>Number of New Non-Financial Account Opened in the Last 3 Months</inlineHelpText>
    <label>Recent non-financial accounts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>