unpackaged/main/default/objects/WC_Credit_Decision__c/fields/BIZ_N_SUM_NEW_OPEN_ACCOUNTS__c.field-meta.xml
<CustomField>
    <fullName>BIZ_N_SUM_NEW_OPEN_ACCOUNTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of open non-financial accounts with the date reported within the last 60 months</description>
    <inlineHelpText>The number of open non-financial accounts with the date reported within the last 60 months</inlineHelpText>
    <label>Non-financial accounts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>