unpackaged/main/default/objects/WC_Credit_Decision__c/fields/BIZ_tot_utiliz_24m__c.field-meta.xml
<CustomField>
    <fullName>BIZ_tot_utiliz_24m__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percent of Highest Balance on all accounts to Highest Credit Limit on all accounts with the date reported in the last 24 months</description>
    <inlineHelpText>Total utilization on all accounts in last 24 months</inlineHelpText>
    <label>Utilization on all accounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>