unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Buy_Rate_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate_Platinum__c</fullName>
    <label>Buy Rate Platinum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>