unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Commercial_Score__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Contains our commercial score--roughly equivalent to the Equifax BDFS (Business Delinquency Financial Score) Commercial Score.</description>
    <inlineHelpText>Score which uses Equifax BMA attributes to approximate commercial credit quality. Higher scores signal better credit.</inlineHelpText>
    <label>Commercial Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>