unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Credit_Score_Decision__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Decision__c</fullName>
    <label>Credit Score Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>