unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Daily_Impact_Pct_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Daily_Impact_Pct_Platinum__c</fullName>
    <label>Daily Impact Pct Platinum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>