unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Daily_Payment_Max_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment_Max_Platinum__c</fullName>
    <label>Daily Payment Max Platinum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>