unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Decline_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reasons__c</fullName>
    <description>List of reasons why a decision recommendation was NF Auto Decline or Auto Decline</description>
    <label>Decline Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FICO</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Public Records</fullName>
            </value>
            <value>
                <fullName>SIC</fullName>
            </value>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>ADB</fullName>
            </value>
            <value>
                <fullName>NSFs</fullName>
            </value>
            <value>
                <fullName>NDs</fullName>
            </value>
            <value>
                <fullName>LA Brunch</fullName>
            </value>
            <value>
                <fullName>TIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>