unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Diamond_11_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Diamond_11_Approval_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diamond 11 Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>