unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Diamond_Amount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Amount_Reason__c</fullName>
    <label>Diamond Amount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>