unpackaged/main/default/objects/WC_Credit_Decision__c/fields/FICO__c.field-meta.xml
<CustomField>
    <fullName>FICO__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FICO input to model</description>
    <inlineHelpText>The FICO which the model used for scoring</inlineHelpText>
    <label>FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>