unpackaged/main/default/objects/WC_Credit_Decision__c/fields/First_Two_of_SIC__c.field-meta.xml
<CustomField>
    <fullName>First_Two_of_SIC__c</fullName>
    <label>First Two of SIC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>