unpackaged/main/default/objects/WC_Credit_Decision__c/fields/First_Two_of_SIC_Comp__c.field-meta.xml
<CustomField>
    <fullName>First_Two_of_SIC_Comp__c</fullName>
    <label>First Two of SIC Comp</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>