unpackaged/main/default/objects/WC_Credit_Decision__c/fields/First_Two_of_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>First_Two_of_Zip_Code__c</fullName>
    <label>First Two of Zip Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>