unpackaged/main/default/objects/WC_Credit_Decision__c/fields/First_Two_of_Zip_Code_Comp__c.field-meta.xml
<CustomField>
    <fullName>First_Two_of_Zip_Code_Comp__c</fullName>
    <label>First Two of Zip Code Comp</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>