unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Gold_10_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gold_10_Approval_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Gold 10 month term recommended amount</description>
    <label>Gold 10 Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>