unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Gold_Amount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Gold_Amount_Reason__c</fullName>
    <label>Gold Amount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>