unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Intercept_Comp__c.field-meta.xml
<CustomField>
    <fullName>Intercept_Comp__c</fullName>
    <label>Intercept Comp</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>