unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Max_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_FICO_Score__c</fullName>
    <label>Max FICO Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>