unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Max_Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Negative_Days__c</fullName>
    <label>Max Negative Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>