unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Max_Tier__c.field-meta.xml
<CustomField>
    <fullName>Max_Tier__c</fullName>
    <label>Max Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>