unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Max_Time_In_Business__c.field-meta.xml
<CustomField>
    <fullName>Max_Time_In_Business__c</fullName>
    <label>Max Time In Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>