unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Max_Time_In_Business_Comp__c.field-meta.xml
<CustomField>
    <fullName>Max_Time_In_Business_Comp__c</fullName>
    <label>Max Time In Business Comp</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>