unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Approval_Probability__c.field-meta.xml
<CustomField>
    <fullName>Model_Approval_Probability__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores the approval probability returned from YHat (e.g., 0.09 = 9% likelihood of approval).</description>
    <label>Model Approval Probability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>