unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_ChargeOff_Probability__c.field-meta.xml
<CustomField>
    <fullName>Model_ChargeOff_Probability__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores the chargeoff probability returned from YHat (e.g., 0.09 = 9% likelihood of chargeoff).</description>
    <label>Model ChargeOff Probability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>