unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Model_Daily_Sales__c</fullName>
    <label>Model Daily Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>