unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Decision__c.field-meta.xml
<CustomField>
    <fullName>Model_Decision__c</fullName>
    <description>Pass or NF Auto Decline based on model recommendation</description>
    <inlineHelpText>Model based NF Auto Decline threshold</inlineHelpText>
    <label>Model Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>