unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Decision_Score__c.field-meta.xml
<CustomField>
    <fullName>Model_Decision_Score__c</fullName>
    <label>Model Decision Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>