unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>Model_Risk_Classification__c</fullName>
    <description>Based on the combined model score (approval and charge-off models) this classification ranks deals from least risky (super-green) to most risky (red). There are five classifications: super-green, green, yellow, orange, and red.</description>
    <inlineHelpText>Based on segmenting the combined approval and charge-off model scores, this classification indicates how risky a deal is--from lowest-risk (super-green) to highest risk (red)</inlineHelpText>
    <label>Model Risk Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Super-Green</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>