unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Run_Errors__c.field-meta.xml
<CustomField>
    <fullName>Model_Run_Errors__c</fullName>
    <description>If a model run results in errors, this field is where they're stored.</description>
    <label>Model Run Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>