unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Model_Run_Status__c</fullName>
    <description>Describes the status of the model run (particularly through Yhat)</description>
    <label>Model Run Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>