unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>