unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Months_of_Deposits_Under_10k__c.field-meta.xml
<CustomField>
    <fullName>Months_of_Deposits_Under_10k__c</fullName>
    <label>Months of Deposits Under 10k</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>