unpackaged/main/default/objects/WC_Credit_Decision__c/fields/My_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Test_Field__c</fullName>
    <label>My Test Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>