unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Open_Judgments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Judgments_Amount__c</fullName>
    <label>Open Judgments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>