unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Open_Public_Record_Balance__c.field-meta.xml
<CustomField>
    <fullName>Open_Public_Record_Balance__c</fullName>
    <label>Open Public Record Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>