unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Other_Decision__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision__c</fullName>
    <description>Set to Pass or (NF) Auto Decline if the decision recommendation is (NF) Auto Decline but all the other explicit decisions are Pass. This takes care of things like LA Brunch</description>
    <label>Other Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>