unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG1_EQF_Cons_Summary__c.field-meta.xml
<CustomField>
    <fullName>PG1_EQF_Cons_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consumer Credit Summary record used to lookup Equifax personal credit</description>
    <label>PG1 Equifax Credit Summary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Consumer_Credit_Summary__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Equifax Consumer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>WC Credit Decisions (PG1 Equifax Credit Summary)</relationshipLabel>
    <relationshipName>WC_Credit_Decisions_EQF</relationshipName>
    <type>Lookup</type>
</CustomField>