unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_1_EQF_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_1_EQF_Score__c</fullName>
    <label>PG 1 EQF Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>