unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_2_BK_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>PG_2_BK_Discharge_Date__c</fullName>
    <label>PG 2 BK Discharge Date</label>
    <type>Date</type>
</CustomField>