unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_2_EXP_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_2_EXP_Score__c</fullName>
    <label>PG 2 EXP Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>