unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_2_Open_Tax_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>PG_2_Open_Tax_Lien_Amount__c</fullName>
    <label>PG 2 Open Tax Lien Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>