unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_COLLS__c.field-meta.xml
<CustomField>
    <fullName>PG_COLLS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of collections on file.</description>
    <inlineHelpText>Total number of collections on file</inlineHelpText>
    <label>Collections</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>