unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_INQ6__c.field-meta.xml
<CustomField>
    <fullName>PG_INQ6__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Inquiries initiated by the consumer within the last 6 months; within each industry of auto finance, mortgage, utilities, and student loans, multiple inquiries in 30-day periods count as one inquiry</description>
    <inlineHelpText>Number of Inquiries initiated by the consumer within the last 6 months; within each industry of auto finance, mortgage, utilities, and student loans, multiple inquiries in 30-day periods count as one inquiry</inlineHelpText>
    <label>Recent Inquiries</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>