unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_OPEN12__c.field-meta.xml
<CustomField>
    <fullName>PG_OPEN12__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of accounts opened within last 12 months on file</description>
    <inlineHelpText>Number of accounts opened within last 12 months on file</inlineHelpText>
    <label>Recently Opened Trades</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>