unpackaged/main/default/objects/WC_Credit_Decision__c/fields/PG_SAT__c.field-meta.xml
<CustomField>
    <fullName>PG_SAT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of accounts satisfactory on file</description>
    <inlineHelpText>Number of accounts satisfactory on file</inlineHelpText>
    <label>Satisfactory Trades</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>