unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Platinum_12_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Platinum_12_Approval_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Platinum 12 month term recommended amount</description>
    <label>Platinum 12 Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>