unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Platinum_Term_Reason__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Term_Reason__c</fullName>
    <label>Platinum Term Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>