unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Pricing_Definition_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Definition_External_Id__c</fullName>
    <label>Pricing Definition External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>