unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Primary_Model__c.field-meta.xml
<CustomField>
    <fullName>Primary_Model__c</fullName>
    <label>Primary Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>