unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Public_Records_Coef__c.field-meta.xml
<CustomField>
    <fullName>Public_Records_Coef__c</fullName>
    <label>Public Records Coef</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>