unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Ratio_of_Stdev_to_Avg_Daily_Bal__c.field-meta.xml
<CustomField>
    <fullName>Ratio_of_Stdev_to_Avg_Daily_Bal__c</fullName>
    <label>Ratio of Stdev to Avg Daily Bal</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>