unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Run_Model__c.field-meta.xml
<CustomField>
    <fullName>Run_Model__c</fullName>
    <label>Run Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>