unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Run_Recommendation_Rules_Engine__c.field-meta.xml
<CustomField>
    <fullName>Run_Recommendation_Rules_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Recommendation Rules Engine</label>
    <type>Checkbox</type>
</CustomField>