unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Score_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Score_Annual_Revenue__c</fullName>
    <label>Score: Annual Revenue</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>