unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Score_Deposit_Volatility__c.field-meta.xml
<CustomField>
    <fullName>Score_Deposit_Volatility__c</fullName>
    <label>Score: Deposit Volatility</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>