unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Score_FICO__c.field-meta.xml
<CustomField>
    <fullName>Score_FICO__c</fullName>
    <label>Score: FICO</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>