unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Score_NSF__c.field-meta.xml
<CustomField>
    <fullName>Score_NSF__c</fullName>
    <label>Score: NSF</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>